# service_movie

./: .gitignore  README.md  pyproject.toml
service_movie/: alembic.ini
service_movie/app/models/: database.py  movie.py
service_movie/base/themoviedb/: api.py  ribbon.py  schemas.py  validation.py
service_movie/base/themoviedb/src/: api.py  validation.py
service_movie/config/: settings.py
service_movie/migrations/: env.py
service_movie/migrations/versions/: 78c95bd1adc0_added_required_tables.py
tests/test_themoviedb/: config_data.py  conftest.py  test_api.py  test_ribbon.py  test_validation.py
