[tool.poetry]
name = "service-movie"
version = "0.1.0"
description = ""
authors = ["Oleksii Martseniuk <martsenyk.l@gmail.com>"]
readme = "README.md"
packages = [{include = "service_movie"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
pydantic = "^1.10.2"
SQLAlchemy = "^1.4.42"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.3"
pytest-asyncio = "^0.20.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
